--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,685 @@
-.App {
-  text-align: center;
+@font-face {
+    font-family: "karla400";
+    src: url("../src/assets/fonts/karla400.ttf");
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.container {
+    max-width: 1440px;
+    height: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.header {
+    display: flex;
+    align-items: center;
+    padding: 25px 270px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo {
+    width: 112px;
+    height: 24px;
+    cursor: pointer;
+}
+
+.item {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    margin-left: 100px;
+    font-family: "karla400";
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 2px;
+    text-align: left;
+    text-decoration-skip-ink: none;
+    list-style-type: none;
+}
+
+.item_text {
+    cursor: pointer;
+    transition: 1s;
+}
+
+.item_text:hover {
+    transition: 1s;
+    color: dodgerblue;
+
+}
+
+.header_btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    width: 92px;
+    height: 26px;
+    border-bottom: 2px solid #A25F4B4D;
+    cursor: pointer;
+    transition: .5s;
+    border-top: 1px solid transparent;
+    border-left: 1px solid transparent;
+    border-right: 1px solid transparent;
+    background-color: white;
+    margin-left: 50px;
+}
+
+.nol {
+    width: 20px;
+    height: 18px;
+    background-color: #1D1F2E;
+    color: white;
+    border-radius: 50px;
+}
+
+.header_btn:hover {
+    transition: .5s;
+    border: 1px solid dodgerblue;
+    background-color: dodgerblue;
+    color: white;
+    border-radius: 5px;
+}
+
+
+.main {
+    width: 1380px;
+    height: 530px;
+    background-color: #050827;
+    margin: 0 auto;
+}
+
+
+.main_rasm {
+    background-image: url(../src/assets/images/main_rasm.png);
+    width: 940px;
+    height: 530px;
+    margin: 0 auto;
+
+}
+
+.main_text {
+    font-family: "Karla400";
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 2px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    padding-top: 169px;
+    color: white;
+}
+
+.main_title {
+    font-family: "Karla400";
+    font-size: 47px;
+    font-weight: 400;
+    line-height: 60px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: white;
+    padding-top: 15px;
+}
+
+.main_text2 {
+    font-family: "Karla44";
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: center;
+    text-decoration-skip-ink: none;
+    color: white;
+    padding-top: 15px;
+}
+
+.main_btn {
+    width: 231px;
+    height: 18px;
+    border: none;
+    font-family: "Karla400";
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 2px;
+    text-align: center;
+    text-decoration-skip-ink: none;
+    background-color: white;
+    margin-top: 48px;
+    cursor: pointer;
+    margin-left: 350px;
+    transition: .5s;
+}
+
+.main_btn:hover {
+    transition: .5s;
+    border-radius: 5px;
+    color: white;
+    background-color: cadetblue;
+}
+
+.section_text {
+    font-family: "Karla400";
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 40px;
+    text-align: center;
+    text-decoration-skip-ink: none;
+    color: #1D1F2E;
+    margin-top: 123px;
+    width: 578px;
+    height: 80px;
+    margin-left: 431px;
+}
+
+.section_text2 {
+    font-family: "Karla400";
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    text-align: center;
+    text-decoration-skip-ink: none;
+    width: 658px;
+    height: 112px;
+    margin-top: 16px;
+    margin-left: 391px;
+    color: #050827;
+}
+
+.section_text3 {
+    font-family: "Karla400";
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 28px;
+    text-align: center;
+    text-decoration-skip-ink: none;
+    color: #A25F4B;
+    margin-top: 21px;
+    border-bottom: 2px solid #A25F4B;
+    width: 133px;
+    margin-left: 654px;
+
+}
+
+.section_title {
+    font-family: "Karla400";
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 2px;
+    text-align: center;
+    text-decoration-skip-ink: none;
+}
+
+.guruh {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    margin-top: 100px;
+}
+
+.guruh2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    margin-top: 100px;
+
+}
+
+.chiziq {
+    width: 30px;
+    height: 2px;
+    background-color: #ECECED;
+}
+
+.section_img_group {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 100px;
+}
+
+.pech {
+    font-family: "Karla400";
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    margin-top: 35px;
+}
+
+.pech2 {
+    font-family: "Karla400";
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    padding-top: 5px;
+    color: #1D1F2EB2;
+}
+
+.pech3 {
+    font-family: Karla;
+    font-size: 19px;
+    font-weight: 400;
+    line-height: 32px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #A25F4B;
+    padding-top: 5px;
+}
+
+s {
+    color: #1D1F2E66;
+    font-size: 16px;
+}
+
+.section2 {
+    max-width: 940px;
+    gap: 15px;
+    display: grid;
+    align-content: center;
+    justify-content: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    margin: 0 auto;
+    margin-top: 100px;
+}
+
+.card_text {
+    font-family: "Karla400";
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    margin-top: 35px;
+}
+
+.ss {
+    font-family: "Karla400";
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    margin-top: 5px;
+    margin-bottom: 65px;
+    color: #1D1F2EB2;
+}
+
+.guruh3 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 100px;
+}
+
+.out {
+    font-family: "Karla400";
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 2px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #1D1F2E;
+}
+
+.out1 {
+    font-family: "Karla400";
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 50px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    width: 237px;
+    height: 100px;
+    margin-top: 15px;
+    color: #1D1F2E;
+}
+
+.out2 {
+    font-family: "Karla400";
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    margin-top: 15px;
+    color: #1D1F2EB2;
+    width: 353px;
+    height: 56px;
+}
+
+.fon3 {
+    margin-top: 15px;
+}
+
+.section3_btn {
+    width: 173px;
+    height: 36px;
+    background-color: #1D1F2E;
+    margin-top: 30px;
+    border: 1px solid transparent;
+    color: white;
+    font-family: "Karla400";
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 2px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    transition: .5s;
+    cursor: pointer;
+}
+
+.section3_btn:hover {
+    transition: .5s;
+    border: 1px solid cadetblue;
+    color: cadetblue;
+    background-color: transparent;
+    border-radius: 5px;
+}
+
+.katta_rasm {
+    margin-top: 130px;
+}
+
+.guruh4 {
+    display: flex;
+    justify-content: center;
+    gap: 23px;
+    margin-top: 105px;
+}
+
+.card2_text {
+    width: 297px;
+    height: 96px;
+    font-family: "Karla400";
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    margin-top: 28px;
+
+}
+
+.card2_text2 {
+    width: 286px;
+    height: 56px;
+    font-family: "Karla400";
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    margin-top: 14px;
+    margin-bottom: 16px;
+    color: #1D1F2EB2;
+}
+
+.card2_sana {
+    color: #1D1F2E;
+    font-family: "Karla400";
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 2px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    margin-top: 30px;
+}
+
+.card2_sana1 {
+    color: #1D1F2E;
+    font-family: "Karla400";
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 2px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+}
+
+.section5 {
+    width: 100%;
+    height: 327px;
+    background-color: #1D1F2E;
+    margin-top: 152px;
+}
+
+.guruh5 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    padding-top: 80px;
+}
+
+.section_title2 {
+    font-family: "Karla400";
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 2px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: white;
+}
+
+.chiziq2 {
+    width: 30px;
+    height: 1px;
+    background-color: #D2D2D51A;
+}
+
+.section5_title {
+    font-family: "Karla400";
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 50px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    margin-top: 15px;
+    color: white;
+}
+
+.input {
+    width: 350px;
+    height: 54px;
+    background-color: #2F303E;
+    border: none;
+    outline: none;
+    color: white;
+    text-align: center;
+    font-family: "Karla400";
+    font-weight: 400;
+    font-size: 18px;
+}
+
+.form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 25px;
+}
+
+.input_btn {
+    width: 129px;
+    height: 54px;
+    border: 1px solid transparent;
+    transition: .5s;
+    cursor: pointer;
+    color: #000000;
+    font-family: "Karla400";
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 2px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+}
+
+.input_btn:hover {
+    transition: .5s;
+    background-color: cadetblue;
+    border: 1px solid green;
+    color: white;
+    border-radius: 5px;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+}
+
+.footer_text {
+    width: 258px;
+    height: 44px;
+    font-family: "Karla400";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    margin-top: 22px;
+    color: #1D1F2EB2;
+}
+
+.footer_text1 {
+    font-family: "Karla400";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    margin-top: 81px;
+    color: #1D1F2E4D;
+}
+
+.footer_title {
+    margin-left: 55px;
+}
+
+.footer_text2 {
+    font-family: "Karla400";
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 2px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    transition: .5s;
+    cursor: pointer;
+}
+
+.footer_text2:hover {
+    transition: .5s;
+    color: blue;
+}
+
+a {
+    text-decoration: none;
+}
+
+.footer_item {
+    list-style-type: none;
+    margin-top: 20px;
+}
+
+.footer_item_text {
+    font-family: "Karla400";
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 22px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    margin-top: 11px;
+    color: #1D1F2EB2;
+}
+
+.footer_title2 {
+    margin-left: 90px;
+}
+
+.footer_title3 {
+    margin-left: 102px;
+
+}
+
+.footer_text3 {
+    font-family: "Karla400";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    margin-top: 22px;
+    color: #1D1F2EB2;
+}
+
+.footer_text4 {
+    font-family: "Karla400";
+    font-size: 23px;
+    font-weight: 400;
+    line-height: 36px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #1D1F2E;
+    margin-top: 16px;
+}
+
+.footer_text5{
+    font-family: "Karla400";
+font-size: 14px;
+font-weight: 400;
+line-height: 22px;
+text-align: left;
+text-underline-position: from-font;
+text-decoration-skip-ink: none;
+margin-top: 54px;
+color: #1D1F2E4D;
 }
